# lemon-optimizer

./: .cursorrules  .gitignore  00_overview.md  01_simulador.md  02_optimizador_v1.md  03_optimizador_v2.md  README.md  app.py  main.py  pyproject.toml
configs/: simulator_config.yaml
data/: farms.csv
src/lemon_packing/: __init__.py  scenarios.py  types.py
src/lemon_packing/io/: __init__.py  loaders.py
src/lemon_packing/opt/: __init__.py  assignment.py
src/lemon_packing/sim/: __init__.py  generators.py  metrics.py  simpy_engine.py
tests/: test_smoke_sim.py
